<resources>
    <string name="app_name">Baking Recipes</string>
    <string name="no_connection_error">Something went wrong. It seems that your are not connected to the Internet</string>
    <string name="count_of_ingredients">10</string>
    <string name="app_title">Baking Recipes</string>
    <string name="app_subtitle">Learn. Bake. Eat</string>
    <string name="title_recipe_list">Recipes</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="step_title">Step short description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widgetname">Baking App</string>

    <!-- Espresso test strings -->
    <string name="brownies">Brownies</string>
    <string name="starting_prep">1. Preheat the oven to 350\ufffdF. Butter the bottom and sides of a 9\"x13\" pan.</string>
    <string name="melt_step_3">2. Melt the butter and bittersweet chocolate together in a microwave or a double boiler. If microwaving, heat for 30 seconds at a time, removing bowl and stirring ingredients in between.</string>
</resources>
