...
        app:layout_constraintGuide_begin="514dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/previous_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_previous"
        android:layout_marginLeft="@dimen/dimen_8_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintTop_toTopOf="@+id/navGuideline"
        android:layout_marginTop="@dimen/dimen_24_dp"
        android:layout_marginStart="@dimen/dimen_80_dp"
        app:layout_constraintVertical_bias="0.466" />

    <ImageView
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/navGuideline"
        app:layout_constraintLeft_toRightOf="@+id/previous_btn"
...
