...
        android:id="@+id/recipes_list_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.elearnna.www.bakingapp.activities.RecipesActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>
        <TextView
            android:id="@+id/error_message_connection"
            android:layout_width="match_parent"
...
